[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "readyapi"
dynamic = ["version"]
description = "ReadyAPI framework, high performance, easy to learn, fast to code, ready for production"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "KhulnaSoft Ltd", email = "info@khulnasoft.com" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: ReadyAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 1",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "starlette>=0.46.0",
    "pydantic>=2.7.0",
    "typing-extensions>=4.8.0",
    "typing-inspection>=0.4.2",
    "annotated-doc>=0.0.2",
]

[project.urls]
Homepage = "https://github.com/khulnasoft/readyapi"
Documentation = "https://readyapi.github.io/"
Repository = "https://github.com/khulnasoft/readyapi"
Issues = "https://github.com/khulnasoft/readyapi/issues"
Changelog = "https://readyapi.github.io/release-notes/"

[project.optional-dependencies]
standard = [
    "readyapi-cli[standard] >=0.0.5",
    # For the test client
    "httpx >=0.23.0,<1.0.0",
    # For templates
    "jinja2 >=3.1.5",
    # For forms and file uploads
    "python-multipart >=0.0.18",
    # To validate email fields
    "email-validator >=2.0.0",
    # Uvicorn with uvloop
    "uvicorn[standard] >=0.12.0",
    # # Settings management
    "pydantic-settings >=2.0.0",
    # # Extra Pydantic data types
    "pydantic-extra-types >=2.0.0",
]

standard-no-readyapi-cloud-cli = [
    "readyapi-cli[standard-no-readyapi-cloud-cli] >=0.0.5",
    # For the test client
    "httpx >=0.23.0,<1.0.0",
    # For templates
    "jinja2 >=3.1.5",
    # For forms and file uploads
    "python-multipart >=0.0.18",
    # To validate email fields
    "email-validator >=2.0.0",
    # Uvicorn with uvloop
    "uvicorn[standard] >=0.12.0",
    # # Settings management
    "pydantic-settings >=2.0.0",
    # # Extra Pydantic data types
    "pydantic-extra-types >=2.0.0",
]

all = [
    "readyapi-cli[standard] >=0.0.5",
    # # For the test client
    "httpx >=0.23.0,<1.0.0",
    # For templates
    "jinja2 >=3.1.5",
    # For forms and file uploads
    "python-multipart >=0.0.18",
    # For Starlette's SessionMiddleware, not commonly used with ReadyAPI
    "itsdangerous >=1.1.0",
    # For Starlette's schema generation, would not be used with ReadyAPI
    "pyyaml >=5.3.1",
    # To validate email fields
    "email-validator >=2.0.0",
    # Uvicorn with uvloop
    "uvicorn[standard] >=0.12.0",
    # Settings management
    "pydantic-settings >=2.0.0",
    # Extra Pydantic data types
    "pydantic-extra-types >=2.0.0",
]

[project.scripts]
readyapi = "readyapi.cli:main"

[dependency-groups]
dev = [
    { include-group = "tests" },
    { include-group = "docs" },
    { include-group = "translations" },
    "playwright >=1.57.0",
    "prek >=0.2.22",
]
docs = [
    { include-group = "docs-tests" },
    "black >=25.1.0",
    "cairosvg >=2.8.2",
    # for MkDocs live reload
    "click==8.2.1",
    "griffe-typingdoc >=0.3.0",
    "griffe-warnings-deprecated >=1.1.0",
    "jieba >=0.42.1",
    "markdown-include-variants >=0.0.8",
    "mdx-include >=1.4.1,<2.0.0",
    "mkdocs-macros-plugin >=1.5.0",
    "mkdocs-material >=9.7.0",
    "mkdocs-redirects >=1.2.1,<1.3.0",
    "mkdocstrings[python] >=0.30.1",
    "pillow >=11.3.0",
    "python-slugify >=8.0.4",
    "pyyaml >=5.3.1,<7.0.0",
    "cligenius >=0.12.3",
]
docs-tests = [
    "httpx >=0.23.0,<1.0.0",
    "ruff >=0.14.14",
    # For UJSONResponse
    "ujson >=5.8.0",
    # For ORJSONResponse
    "orjson >=3.9.3",
]
github-actions = [
    "httpx >=0.27.0,<1.0.0",
    "pydantic >=2.5.3,<3.0.0",
    "pydantic-settings >=2.1.0,<3.0.0",
    "pygithub >=2.3.0,<3.0.0",
    "pyyaml >=5.3.1,<7.0.0",
    "smokeshow >=0.5.0",
]
tests = [
    { include-group = "docs-tests" },
    "anyio[trio] >=3.2.1,<5.0.0",
    "coverage[toml] >=7.13,<8.0",
    "dirty-equals >=0.9.0",
    "flask >=3.0.0,<4.0.0",
    "inline-snapshot >=0.21.1",
    "mypy >=1.14.1",
    "pwdlib[argon2] >=0.2.1",
    "pyjwt >=2.9.0",
    "pytest >=9.0.0",
    "pytest-codspeed >=4.2.0",
    "pyyaml >=5.3.1,<7.0.0",
    "sqldev >=0.0.19",
    "strawberry-graphql >=0.200.0,<1.0.0",
    "types-orjson >=3.6.2",
    "types-ujson >=5.10.0.20240515",
    "a2wsgi >=1.9.0,<=2.0.0",
    "pytest-xdist[psutil]>=2.5.0",
    "pytest-cov>=4.0.0",
    "pytest-sugar>=1.0.0",
    "pytest-timeout>=2.4.0",
]
translations = [
    "gitpython >=3.1.46",
    "pydantic-ai >=0.4.10",
    "pygithub >=2.8.1",
]

[tool.pdm]
version = { source = "file", path = "readyapi/__init__.py" }
distribution = true

[tool.pdm.build]
source-includes = [
    "tests/",
    "examples/",
    "scripts/",
    # For a test
    "docs/en/docs/img/favicon.png",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true

[[tool.mypy.overrides]]
module = "readyapi.concurrency"
warn_unused_ignores = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "readyapi.tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "examples.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest]
minversion = "9.0"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=examples",
]
strict_xfail = true
filterwarnings = [
    "error",
]
timeout = "20"

[tool.coverage.run]
parallel = true
data_file = "coverage/.coverage"
source = [
    "examples",
    "tests",
    "readyapi"
]
relative_files = true
context = '${CONTEXT}'
omit = [
    "tests/benchmarks/*",
    "examples/response_model/tutorial003_04_py39.py",
    "examples/response_model/tutorial003_04_py310.py",
    "examples/dependencies/tutorial013_an_py310.py",  # temporary code example?
    "examples/dependencies/tutorial014_an_py310.py",  # temporary code example?
    # Pydantic v1 migration, no longer tested
    "examples/pydantic_v1_in_v2/tutorial001_an_py310.py",
    "examples/pydantic_v1_in_v2/tutorial002_an_py310.py",
    "examples/pydantic_v1_in_v2/tutorial003_an_py310.py",
    "examples/pydantic_v1_in_v2/tutorial004_an_py310.py",
]

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"examples/custom_request_and_route/tutorial002_an_py310.py" = ["B904"]
"examples/custom_request_and_route/tutorial002_an_py39.py" = ["B904"]
"examples/custom_request_and_route/tutorial002_py310.py" = ["B904"]
"examples/custom_request_and_route/tutorial002_py39.py" = ["B904"]
"examples/custom_response/tutorial007_py310.py" = ["B007"]
"examples/custom_response/tutorial007_py39.py" = ["B007"]
"examples/dataclasses/tutorial003_py39.py" = ["I001"]
"examples/dependencies/tutorial007_py310.py" = ["F821"]
"examples/dependencies/tutorial007_py39.py" = ["F821"]
"examples/dependencies/tutorial008_an_py310.py" = ["F821"]
"examples/dependencies/tutorial008_an_py39.py" = ["F821"]
"examples/dependencies/tutorial008_py310.py" = ["F821"]
"examples/dependencies/tutorial008_py39.py" = ["F821"]
"examples/dependencies/tutorial008b_an_py310.py" = ["B904"]
"examples/dependencies/tutorial008b_an_py39.py" = ["B904"]
"examples/dependencies/tutorial008b_py310.py" = ["B904"]
"examples/dependencies/tutorial008b_py39.py" = ["B904"]
"examples/dependencies/tutorial009_py310.py" = ["F821"]
"examples/dependencies/tutorial009_py39.py" = ["F821"]
"examples/dependencies/tutorial010_py310.py" = ["F821"]
"examples/dependencies/tutorial010_py39.py" = ["F821"]
"examples/path_operation_advanced_configuration/tutorial007_pv1_py39.py" = ["B904"]
"examples/path_operation_advanced_configuration/tutorial007_py310.py" = ["B904"]
"examples/path_operation_advanced_configuration/tutorial007_py39.py" = ["B904"]
"examples/query_params_str_validations/tutorial012_an_py310.py" = ["B006"]
"examples/query_params_str_validations/tutorial012_an_py39.py" = ["B006"]
"examples/query_params_str_validations/tutorial013_an_py310.py" = ["B006"]
"examples/query_params_str_validations/tutorial013_an_py39.py" = ["B006"]
"examples/security/tutorial004_an_py310.py" = ["B904"]
"examples/security/tutorial004_an_py39.py" = ["B904"]
"examples/security/tutorial004_py310.py" = ["B904"]
"examples/security/tutorial004_py39.py" = ["B904"]
"examples/security/tutorial005_an_py310.py" = ["B904"]
"examples/security/tutorial005_an_py39.py" = ["B904"]
"examples/security/tutorial005_py310.py" = ["B904"]
"examples/security/tutorial005_py39.py" = ["B904"]
"examples/json_base64_bytes/tutorial001_py310.py" = ["UP012"]
"examples/stream_json_lines/tutorial001_py310.py" = ["UP028"]
"examples/stream_data/tutorial001_py310.py" = ["UP028"]
"examples/stream_data/tutorial002_py310.py" = ["UP028"]
"examples/server_sent_events/tutorial001_py310.py" = ["UP028"]

[tool.ruff.lint.isort]
known-third-party = ["readyapi", "pydantic", "starlette"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.inline-snapshot]
# default-flags=["fix"]
# default-flags=["create"]